# bucket-based_farthest-point-sampling_CPU

./: .gitignore  CMakeLists.txt  Makefile  README.md  debug.sh
.github/workflows/: cmake.yml
data/: 000000.txt
src/: Interval.cpp  Interval.h  KDLineTree.cpp  KDLineTree.h  KDNode.cpp  KDNode.h  KDTree.cpp  KDTree.h  KDTreeBase.cpp  KDTreeBase.h  Point.cpp  Point.h  baseline_main.cpp  kdtree_main.cpp  utils.h
